fixed social icons issue when they were jumping

--- a/src/components/Main/Main.styles.css
+++ b/src/components/Main/Main.styles.css
@@ -1,4 +1,4 @@
-.main .card-img-top {
+#main-section .card-img-top {
   width: 200px;
   height: 200px;
   border-radius: 100px;
@@ -9,23 +9,26 @@
   margin-bottom: -70px;
 }
 
-.main .row {
+#main-section .row {
   justify-content: center;
 }
-.main .card {
+#main-section .card {
   border-bottom: none!important;
   border-radius: .25rem .25rem 0 0;
 }
-.main .card-text {
+#main-section .card-text {
   font-size: 1.4rem;
 }
-.main .social-network.heading{
+#main-section .social-network.heading{
   margin-bottom: 1rem;
 }
-.main .social-network i {
+#main-section .social-network div{
+height: 30px;
+}
+#main-section .social-network i {
   font-size: 1.6rem;
 }
-.main .social-network i:hover {
+#main-section .social-network i:hover {
   font-size: 2rem;
   color: #5F5AA2;
 }
